added header to all pages

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -5,8 +5,8 @@
             <!-- Nav -->
             <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal">
                 <!-- Logo -->
-                <a class="navbar-brand u-header__navbar-brand mr-7 " href="/landing/bishal" aria-label="d">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/oppn-white.svg'), :alt => "Logo", :class => "custom_logo" %>
+                <a class="navbar-brand u-header__navbar-brand mr-7 " href="bishal" aria-label="d">
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/oppn-white.svg'), :alt => "Logo", :class => "main_logo" %>
                 </a>
                 <!-- End Logo -->
             </nav>
@@ -28,9 +28,10 @@
         -->
 
         <div class="js-bg-video d-none d-md-block position-absolute w-100 h-100" data-hs-bgv-type="youtube" data-hs-bgv-id="0qisGSwZym4" data-hs-bgv-loop="true" style="position: relative;">
-            <iframe id="hsYTPlayer0" class="hs-youtube hs-bg-video" data-hs-bgv-id="0qisGSwZym4" data-hs-bgv-loop="1" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/0qisGSwZym4?autoplay=1&amp;controls=0&amp;showinfo=0&amp;enablejsapi=1&amp;modestbranding=1&amp;iv_load_policy=3&amp;loop=1&amp;playlist=0qisGSwZym4&amp;origin=http%3A%2F%2Fhtmlstream.com&amp;widgetid=1" style="width: 2392.89px; height: 2186.67px;"></iframe>
+            <iframe id="hsYTPlayer0" class="hs-youtube hs-bg-video" data-hs-bgv-id="0qisGSwZym4" data-hs-bgv-loop="1" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://media.istockphoto.com/videos/in-the-electronics-store-professional-consultant-provides-expert-on-video-id844490090?playlist=in-the-electronics-store-professional-consultant-provides-expert-on-video-id844490090&loop=1&mute=1&enablejsapi=1" style="width: 2392.89px; height: 2186.67px;"></iframe>
+            <!-- <iframe id="hsYTPlayer0" class="hs-youtube hs-bg-video" data-hs-bgv-id="0qisGSwZym4" data-hs-bgv-loop="1" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/DPGkChTimdg?playlist=DPGkChTimdg&loop=1&autoplay=1&mute=1&enablejsapi=1" style="width: 2392.89px; height: 2186.67px;"></iframe> -->
             <div class="hs-video-preview" style="background-image: url(&quot;//img.youtube.com/vi/0qisGSwZym4/maxresdefault.jpg&quot;); display: none;"></div>
-      </div>
+        </div>
 
     </div>
     <!-- End Video Background -->
@@ -93,7 +94,7 @@
 
 
 <!-- Icon Blocks -->
-<div class="row mx-auto mb-4 mt-6">
+<div class="row mx-auto mb-9 mt-9">
     <div class="col-md-6 mb-9 mb-md-0">
         <div class="pr-lg-3 text-center">
             <h4 class="h5">Une franchise en vue?</h4>
@@ -115,7 +116,7 @@
 <!-- End Icon Blocks -->
 
 <!-- Features Section -->
-<div class="w-65 mx-auto bg-soft mt-6 mb-6 rounded-pseudo">
+<div class="w-65 mx-auto bg-soft mt-9 mb-6 rounded-pseudo">
     <div class="container u-space-1">
         <div class="row justify-content-lg-between align-items-lg-center">
             <div class="col-lg-5 order-lg-2 mb-9 mb-lg-0">
@@ -9056,20 +9057,19 @@
     <div class="container space-top-2 space-top-md-3 space-bottom-2">
         <!-- Logo -->
         <a class="d-inline-flex align-items-center mb-4" href="bishal" aria-label="oppn">
-            <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/open.png'), :alt => "Logo", :class => "custom_logo" %>
-            <span class="brand brand-primary font-weight-bold">Oppn.io</span>
+            <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/oppn-blue.svg'), :alt => "Logo", :class => "custom_logo" %>
         </a>
         <!-- End Logo -->
 
         <div class="row">
-            <div class="col-sm-12 col-lg-4 mb-7 mb-sm-5">
+            <div class="col-sm-12 col-lg-4 mb-7 mb-sm-7">
                 <div class="mb-4">
                     <h2 class="text-primary h5">Oppn vous ouvre les portes des franchises, partout en France</h2>
                 </div>
-                <a class="btn btn-primary btn-sm transition-3d-hover" href="#" target="_blank">Toutes les enseignes</a>
+                <a class="btn btn-primary btn-sm transition-3d-hover" href="bishal2" target="_blank">Toutes les enseignes</a>
             </div>
 
-            <div class="col-sm-4 col-lg-2 mb-4 mb-sm-5 ml-lg-auto">
+            <div class="col-sm-4 col-lg-2 mb-4 mb-sm-8 ml-lg-auto">
                 <h4 class="h6 font-weight-semi-bold">A propos</h4>
 
                 <!-- List Group -->
@@ -9082,7 +9082,7 @@
                 <!-- End List Group -->
             </div>
 
-            <div class="col-sm-4 col-lg-3 mb-4 mb-sm-6 ml-lg-auto">
+            <div class="col-sm-4 col-lg-3 mb-4 mb-sm-8 ml-lg-auto">
                 <h4 class="h6 font-weight-semi-bold">Vos visites par thème</h4>
 
                 <!-- List Group -->
@@ -9098,7 +9098,7 @@
                 <!-- End List Group -->
             </div>
 
-            <div class="col-sm-4 col-lg-2 mb-4 mb-sm-5 ml-lg-auto">
+            <div class="col-sm-4 col-lg-2 mb-4 mb-sm-8 ml-lg-auto">
                 <h4 class="h6 font-weight-semi-bold">Nos sites</h4>
 
                 <!-- List Group -->
@@ -9129,32 +9129,12 @@
             </li>
             <li class="list-inline-item mx-0">
               <a class="btn btn-sm btn-icon btn-soft-secondary btn-bg-transparent" href="#">
-                <span class="fab fa-google btn-icon__inner"></span>
-              </a>
-            </li>
-            <li class="list-inline-item mx-0">
-              <a class="btn btn-sm btn-icon btn-soft-secondary btn-bg-transparent" href="#">
                 <span class="fab fa-twitter btn-icon__inner"></span>
               </a>
             </li>
             <li class="list-inline-item mx-0">
               <a class="btn btn-sm btn-icon btn-soft-secondary btn-bg-transparent" href="#">
-                <span class="fab fa-github btn-icon__inner"></span>
-              </a>
-            </li>
-            <li class="list-inline-item mx-0">
-              <a class="btn btn-sm btn-icon btn-soft-secondary btn-bg-transparent" href="#">
                 <span class="fab fa-instagram btn-icon__inner"></span>
-              </a>
-            </li>
-            <li class="list-inline-item mx-0">
-              <a class="btn btn-sm btn-icon btn-soft-secondary btn-bg-transparent" href="#">
-                <span class="fab fa-behance btn-icon__inner"></span>
-              </a>
-            </li>
-            <li class="list-inline-item mx-0">
-              <a class="btn btn-sm btn-icon btn-soft-secondary btn-bg-transparent" href="#">
-                <span class="fab fa-dribbble btn-icon__inner"></span>
               </a>
             </li>
           </ul>
