--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -4,8 +4,8 @@
       <!-- Nav -->
       <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal">
         <!-- Logo -->
-        <a class="navbar-brand u-header__navbar-brand u-header__navbar-brand-top-space" href="../../html/home/index.html" aria-label="Front">
-          <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/open.png'), :alt => "Logo", :class => "custom_logo" %>
+        <a class="navbar-brand u-header__navbar-brand u-header__navbar-brand-top-space" href="bishal" aria-label="Front">
+          <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/oppn-blue.svg'), :alt => "Logo", :class => "custom_logo" %>
         </a>
         <!-- End Logo -->
         
