footer added in all pages/ Project almost done

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -20,16 +20,10 @@
 <div class="u-gradient-overlay-half-primary-video-v1 u-bg-img-hero" style="background-image: url(../../assets/img/1920x1080/img20.jpg);">
     <!-- Video Background -->
     <div class="js-bg-video d-none d-md-block position-absolute w-100 h-100" data-hs-bgv-type="youtube" data-hs-bgv-id="0qisGSwZym4" data-hs-bgv-loop="true">
-        
-       <!-- 
-            <video autoplay loop id="video-background" muted plays-inline>
-                <source src="https://player.vimeo.com/external/158148793.hd.mp4?s=8e8741dbee251d5c35a759718d4b0976fbf38b6f&profile_id=119&oauth2_token_id=57447761" type="video/mp4">
-            </video>
-        -->
 
         <div class="js-bg-video d-none d-md-block position-absolute w-100 h-100" data-hs-bgv-type="youtube" data-hs-bgv-id="0qisGSwZym4" data-hs-bgv-loop="true" style="position: relative;">
-            <iframe id="hsYTPlayer0" class="hs-youtube hs-bg-video" data-hs-bgv-id="0qisGSwZym4" data-hs-bgv-loop="1" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://media.istockphoto.com/videos/in-the-electronics-store-professional-consultant-provides-expert-on-video-id844490090?playlist=in-the-electronics-store-professional-consultant-provides-expert-on-video-id844490090&loop=1&mute=1&enablejsapi=1" style="width: 2392.89px; height: 2186.67px;"></iframe>
-            <!-- <iframe id="hsYTPlayer0" class="hs-youtube hs-bg-video" data-hs-bgv-id="0qisGSwZym4" data-hs-bgv-loop="1" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/DPGkChTimdg?playlist=DPGkChTimdg&loop=1&autoplay=1&mute=1&enablejsapi=1" style="width: 2392.89px; height: 2186.67px;"></iframe> -->
+            <!-- <iframe id="hsYTPlayer0" class="hs-youtube hs-bg-video" data-hs-bgv-id="0qisGSwZym4" data-hs-bgv-loop="1" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://media.istockphoto.com/videos/in-the-electronics-store-professional-consultant-provides-expert-on-video-id844490090?playlist=in-the-electronics-store-professional-consultant-provides-expert-on-video-id844490090&loop=1&mute=1&enablejsapi=1" style="width: 2392.89px; height: 2186.67px;"></iframe>-->
+            <iframe id="hsYTPlayer0" class="hs-youtube hs-bg-video" data-hs-bgv-id="0qisGSwZym4" data-hs-bgv-loop="1" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/DPGkChTimdg?playlist=DPGkChTimdg&loop=1&autoplay=1&mute=1&enablejsapi=1" style="width: 2392.89px; height: 2186.67px;"></iframe> 
             <div class="hs-video-preview" style="background-image: url(&quot;//img.youtube.com/vi/0qisGSwZym4/maxresdefault.jpg&quot;); display: none;"></div>
         </div>
 
@@ -42,8 +36,6 @@
             <div class="container text-center u-space-3">
                 <div class="row justify-content-md-center">
                     <div class="col-md-10">
-                        
-
                         <!-- Info -->
                         <div class="mt-4 mb-7">
                             <h1 class="display-4 text-white font-weight-normal">Essayez avant de vous lancer !</h1>
@@ -82,7 +74,7 @@
                                 </div>
                             </div>
                         </form>
-                        <!-- End Form -->
+                        <!-- End Form -->  
                     </div>
                 </div>
             </div>
@@ -92,9 +84,18 @@
 </div>
 <!-- End Hero Section -->
 
+<!-- Scroll Down Button -->
+
+<div class="w-md-80 w-lg-100 text-center mx-md-auto scrollDown">
+    <a class="js-go-to down" href="#svgArrows" data-target="#svgArrows" data-compensation="#header" data-type="static" style="display: inline-block;">
+        <span class="fas fa-long-arrow-alt-down u-go-to-ver-arrow__inner"></span>
+    </a>
+</div>
+<!-- End Scroll Down Button -->
 
 <!-- Icon Blocks -->
-<div class="row mx-auto mb-9 mt-9">
+<div class="row w-65 mx-auto mb-9 mt-10" id="svgArrows">
+    
     <div class="col-md-6 mb-9 mb-md-0">
         <div class="pr-lg-3 text-center">
             <h4 class="h5">Une franchise en vue?</h4>
@@ -116,7 +117,7 @@
 <!-- End Icon Blocks -->
 
 <!-- Features Section -->
-<div class="w-65 mx-auto bg-soft mt-9 mb-6 rounded-pseudo">
+<div class="w-65 mx-auto bg-soft mt-10 mb-6 rounded-pseudo">
     <div class="container u-space-1">
         <div class="row justify-content-lg-between align-items-lg-center">
             <div class="col-lg-5 order-lg-2 mb-9 mb-lg-0">
@@ -8968,7 +8969,7 @@
             <div class="pr-md-4">
                 <!-- Title -->
                 <div class="mb-7">
-                    <span class="u-label u-label--sm u-label--success mb-2">Conceptstor</span>
+                    <span class="u-label u-label--sm u-label--success mb-2">Partenaire</span>
                     <h2 class="text-primary">Besoin d’<span class="font-weight-bold">inspiration?</span></h2>
                     <p>Vous ne savez pas encore quelle franchise vous intéresse? Comparez les différents concepts commerciaux en images, sur tous les thèmes qui sont important pour vous.</p>
                 </div>
@@ -9052,7 +9053,7 @@
 </div>
 
 <!-- ========== FOOTER ========== -->
-<footer id="SVGwave7BottomShape" class="position-relative border-top" style="">
+<footer id="SVGwave7BottomShape" class="position-relative border-top pt-5" style="">
     <!-- Lists -->
     <div class="container space-top-2 space-top-md-3 space-bottom-2">
         <!-- Logo -->
@@ -9160,9 +9161,3 @@
     <!-- End SVG Shape -->
 </footer>
 <!-- ========== END FOOTER ========== -->
-
-
-
-
-
-
