--- a/frontend/init/stylesheet/bishal.css
+++ b/frontend/init/stylesheet/bishal.css
@@ -9,8 +9,8 @@ figure {
 }
 
 .custom_logo {
-  height: 50px;
-  padding-top: 1rem;
+  height: 40px;
+  margin-top: 10px;
 }
 
 .main_logo {
@@ -164,4 +164,84 @@ figure {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+.custom-icon{
+  height: 2rem;
+  width: 2rem;
+}
+
+.mt-10{
+  margin-top: 8rem;
+}
+
+.scrollDown{
+  position: absolute;
+  bottom: 15%;
+  z-index: 1;
+  margin: 0 auto;
+}
+
+.down{
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 30px;
+  height: 60px;
+  margin-left: -15px;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  box-sizing: border-box;
+}
+
+.down span::before {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  content: '';
+  width: 6px;
+  height: 6px;
+  margin-left: -3px;
+  background-color: #fff;
+  border-radius: 100%;
+  -webkit-animation: sdb10 2s infinite;
+  animation: goDown 2s infinite;
+  box-sizing: border-box;
+}
+@-webkit-keyframes goDown {
+  0% {
+    -webkit-transform: translate(0, 0);
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: translate(0, 20px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes goDown {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    transform: translate(0, 20px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.cbp .img-modified{
+  width: 80% !important;
+  height: 80% !important;
 }
