--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -33,7 +33,7 @@
     <div class="position-relative z-index-2">
         <!-- Content -->
         <div class="d-md-flex align-items-md-center min-height-100vh mb-5">
-            <div class="container text-center u-space-3">
+            <div class="container text-center u-space-3 heroTitle">
                 <div class="row justify-content-md-center">
                     <div class="col-md-10">
                         <!-- Info -->
@@ -85,7 +85,6 @@
 <!-- End Hero Section -->
 
 <!-- Scroll Down Button -->
-
 <div class="w-md-80 w-lg-100 text-center mx-md-auto scrollDown">
     <a class="js-go-to down" href="#svgArrows" data-target="#svgArrows" data-compensation="#header" data-type="static" style="display: inline-block;">
         <span class="fas fa-long-arrow-alt-down u-go-to-ver-arrow__inner"></span>
@@ -128,10 +127,9 @@
             </div>
 
             <div class="col-lg-7 order-lg-1">    
-
                 <!-- SVG Shape -->
-                <img-svg class="img-svg " src="/images/illustrations/map-around-me.svg?v=50ec7ceee5c5f1ddf86851d8efcc6eea">
-                    <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="453px" height="383px" viewBox="0 0 453 383" version="1.1" id="svg87" sodipodi:docname="map-around-me.svg" inkscape:version="0.92.3 (3ce5693, 2018-03-11)">
+                <img-svg src="/images/illustrations/map-around-me.svg?v=50ec7ceee5c5f1ddf86851d8efcc6eea">
+                    <svg class="img-svg" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="453px" height="383px" viewBox="0 0 453 383" version="1.1" id="svg87" sodipodi:docname="map-around-me.svg" inkscape:version="0.92.3 (3ce5693, 2018-03-11)">
                         <defs id="defs38">
                             <ellipse id="map-aroundme-path-1" cx="31.5614849" cy="31.5716216" rx="31.5614849" ry="31.5716216"></ellipse>
                             <filter x="-38.0%" y="-28.5%" width="176.0%" height="176.0%" filterUnits="objectBoundingBox" id="filter-3">
@@ -9062,7 +9060,7 @@
         </a>
         <!-- End Logo -->
 
-        <div class="row">
+        <div class="row mb-7">
             <div class="col-sm-12 col-lg-4 mb-7 mb-sm-7">
                 <div class="mb-4">
                     <h2 class="text-primary h5">Oppn vous ouvre les portes des franchises, partout en France</h2>
