--- a/app/views/landing/bishal3.html.erb
+++ b/app/views/landing/bishal3.html.erb
@@ -598,7 +598,7 @@
         </a>
         <!-- End Logo -->
 
-        <div class="row">
+        <div class="row mb-6">
             <div class="col-sm-12 col-lg-4 mb-7 mb-sm-7">
                 <div class="mb-4">
                     <h2 class="text-primary h5">Oppn vous ouvre les portes des franchises, partout en France</h2>
