--- a/app/views/landing/bishal4.html.erb
+++ b/app/views/landing/bishal4.html.erb
@@ -59,17 +59,13 @@
         <div class="container space-2">
             <div class="row justify-content-between align-items-center mb-4">
                 <!-- Title -->
-                <div class="col-sm-4 col-md-6 mb-3 mb-sm-0">
+                <div class="col-sm-6 col-md-5 mb-3 mb-sm-0">
                     <h2 class="h6 mb-0">52 adresses vous accueillent ! </h2>
                 </div>
                 <!-- End Title -->
 
-                
-
                 <!-- Filter -->
-                <div class="col-sm-8 col-md-6 text-sm-right">
-                    
-
+                <div class="col-sm-6 col-md-7 text-sm-right">
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item">
                             <!-- Search -->
@@ -115,8 +111,8 @@
 
             <div class="mb-7">
                 <!-- Projects -->
-                <div class="card mb-5">
-                    <div class="card-body p-5">  
+                <div class="card mb-5 table-width">
+                    <div class="card-body">  
                         <!-- Transaction Table -->
                         <div class="table-responsive-md u-datatable">
                             <table class="js-datatable table table-borderless u-datatable__striped u-datatable__content mb-5">
@@ -127,8 +123,8 @@
                                         </td>
                                         <td class="align-middle text-primary font-weight-bold">Lyon</td>
                                         <td class="align-middle text-secondary">123 rue de la liberté</td>
-                                        <td class="align-middle text-secondary">7 visiteurs vous précèdent</td>
-                                        <td class="align-middle text-secondary">
+                                        <td class="align-middle text-secondary num-visitor">7 visiteurs vous précèdent</td>
+                                        <td class="align-middle text-secondary img-visitor">
                                             <ul class="list-inline mb-0">
                                                 <li class="list-inline-item mr-0" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sean Lewis">
                                                     <div class="u-sm-avatar u-sm-avatar--bordered rounded-circle">
@@ -163,8 +159,8 @@
                                         </td>
                                         <td class="align-middle text-secondary"></td>
                                         <td class="align-middle text-secondary">456 rue de la liberté</td>
-                                        <td class="align-middle text-secondary">9 visiteurs vous précèdent</td>
-                                        <td class="align-middle text-secondary">
+                                        <td class="align-middle text-secondary num-visitor">9 visiteurs vous précèdent</td>
+                                        <td class="align-middle text-secondary img-visitor">
                                             <ul class="list-inline mb-0">
                                                 <li class="list-inline-item mr-0" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sean Lewis">
                                                     <div class="u-sm-avatar u-sm-avatar--bordered rounded-circle">
@@ -198,8 +194,8 @@
                                         </td>
                                         <td class="align-middle text-secondary"></td>
                                         <td class="align-middle text-secondary">789 rue de la liberté</td>
-                                        <td class="align-middle text-secondary">10 visiteurs vous précèdent</td>
-                                        <td class="align-middle text-secondary">
+                                        <td class="align-middle text-secondary num-visitor">10 visiteurs vous précèdent</td>
+                                        <td class="align-middle text-secondary img-visitor">
                                             <ul class="list-inline mb-0">
                                                 <li class="list-inline-item mr-0" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sean Lewis">
                                                     <div class="u-sm-avatar u-sm-avatar--bordered rounded-circle">
@@ -236,8 +232,8 @@
                                         </td>
                                         <td class="align-middle text-secondary"></td>
                                         <td class="align-middle text-secondary">101 rue de la liberté</td>
-                                        <td class="align-middle text-secondary">7 visiteurs vous précèdent</td>
-                                        <td class="align-middle text-secondary">
+                                        <td class="align-middle text-secondary num-visitor">7 visiteurs vous précèdent</td>
+                                        <td class="align-middle text-secondary img-visitor">
                                             <ul class="list-inline mb-0">
                                                 <li class="list-inline-item mr-0" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sean Lewis">
                                                     <div class="u-sm-avatar u-sm-avatar--bordered rounded-circle">
@@ -282,8 +278,8 @@
                                         </td>
                                         <td class="align-middle text-primary font-weight-bold">Nice</td>
                                         <td class="align-middle text-secondary">123 rue de la liberté</td>
-                                        <td class="align-middle text-secondary">7 visiteurs vous précèdent</td>
-                                        <td class="align-middle text-secondary">
+                                        <td class="align-middle text-secondary num-visitor">7 visiteurs vous précèdent</td>
+                                        <td class="align-middle text-secondary img-visitor">
                                             <ul class="list-inline mb-0">
                                                 <li class="list-inline-item mr-0" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sean Lewis">
                                                     <div class="u-sm-avatar u-sm-avatar--bordered rounded-circle">
@@ -318,8 +314,8 @@
                                         </td>
                                         <td class="align-middle text-secondary"></td>
                                         <td class="align-middle text-secondary">456 rue de la liberté</td>
-                                        <td class="align-middle text-secondary">9 visiteurs vous précèdent</td>
-                                        <td class="align-middle text-secondary">
+                                        <td class="align-middle text-secondary num-visitor">9 visiteurs vous précèdent</td>
+                                        <td class="align-middle text-secondary img-visitor">
                                             <ul class="list-inline mb-0">
                                                 <li class="list-inline-item mr-0" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sean Lewis">
                                                     <div class="u-sm-avatar u-sm-avatar--bordered rounded-circle">
@@ -353,8 +349,8 @@
                                         </td>
                                         <td class="align-middle text-secondary"></td>
                                         <td class="align-middle text-secondary">789 rue de la liberté</td>
-                                        <td class="align-middle text-secondary">10 visiteurs vous précèdent</td>
-                                        <td class="align-middle text-secondary">
+                                        <td class="align-middle text-secondary num-visitor">10 visiteurs vous précèdent</td>
+                                        <td class="align-middle text-secondary img-visitor">
                                             <ul class="list-inline mb-0">
                                                 <li class="list-inline-item mr-0" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sean Lewis">
                                                     <div class="u-sm-avatar u-sm-avatar--bordered rounded-circle">
@@ -391,8 +387,8 @@
                                         </td>
                                         <td class="align-middle text-secondary"></td>
                                         <td class="align-middle text-secondary">101 rue de la liberté</td>
-                                        <td class="align-middle text-secondary">7 visiteurs vous précèdent</td>
-                                        <td class="align-middle text-secondary">
+                                        <td class="align-middle text-secondary num-visitor">7 visiteurs vous précèdent</td>
+                                        <td class="align-middle text-secondary img-visitor">
                                             <ul class="list-inline mb-0">
                                                 <li class="list-inline-item mr-0" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sean Lewis">
                                                     <div class="u-sm-avatar u-sm-avatar--bordered rounded-circle">
@@ -430,8 +426,6 @@
                 </div>
                 <!-- End Projects -->
 
-            
-
                 <!-- Pagination -->
                 <div class="d-flex justify-content-between align-items-center">
                     <nav aria-label="Page navigation">
@@ -458,24 +452,22 @@
                     <small class="d-none d-sm-inline-block text-secondary">Showing 6 out of 52</small>
                 </div>
                 <!-- End Pagination -->          
-            </div>
-
-            
+            </div> 
         </div>
     </div>
 </main>
 
 <!-- ========== FOOTER ========== -->
-<footer id="SVGwave7BottomShape" class="position-relative border-top pt-5" style="">
+<footer id="SVGwave7BottomShape" class="position-relative border-top pt-5">
     <!-- Lists -->
-    <div class="container space-top-2 space-top-md-3 space-bottom-2">
+    <div class="container space-top-2 space-top-md-3 space-bottom-2 ">
         <!-- Logo -->
         <a class="d-inline-flex align-items-center mb-4" href="bishal" aria-label="oppn">
             <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/oppn-blue.svg'), :alt => "Logo", :class => "custom_logo" %>
         </a>
         <!-- End Logo -->
 
-        <div class="row">
+        <div class="row mb-6">
             <div class="col-sm-12 col-lg-4 mb-7 mb-sm-7">
                 <div class="mb-4">
                     <h2 class="text-primary h5">Oppn vous ouvre les portes des franchises, partout en France</h2>
