--- a/app/views/landing/bishal5.html.erb
+++ b/app/views/landing/bishal5.html.erb
@@ -531,7 +531,7 @@
         </a>
         <!-- End Logo -->
 
-        <div class="row">
+        <div class="row mb-4">
             <div class="col-sm-12 col-lg-4 mb-7 mb-sm-7">
                 <div class="mb-4">
                     <h2 class="text-primary h5">Oppn vous ouvre les portes des franchises, partout en France</h2>
@@ -568,7 +568,7 @@
                 <!-- End List Group -->
             </div>
 
-            <div class="col-sm-4 col-lg-2 mb-4 mb-sm-8 ml-lg-auto">
+            <div class="col-sm-4 col-lg-2 mb-6 mb-sm-8 ml-lg-auto">
                 <h4 class="h6 font-weight-semi-bold">Nos sites</h4>
 
                 <!-- List Group -->
@@ -614,7 +614,7 @@
     <!-- End Social Networks -->
 
     <!-- SVG Shape -->
-    <figure class="ie-wave-7-bottom w-80 w-md-65 w-lg-50 position-absolute bottom-0 left-0 z-index-n1">
+    <figure class="ie-wave-7-bottom w-80 w-md-65 w-lg-50 position-absolute bottom-0 left-0 z-index-n1 mt-4">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 589.5 112.7" style="enable-background:new 0 0 589.5 112.7;" xml:space="preserve" class="injected-svg js-svg-injector" data-parent="#SVGwave7BottomShape">
             <style type="text/css">
                 .wave-7-bottom-0{fill:#377DFF;}
