--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -75,7 +75,7 @@
     <!-- Hero -->
     <div class="d-lg-flex align-items-lg-center u-gradient-half-primary-v1 min-height-100vh--lg">
         <div class="d-none d-lg-block u-bg-img-hero position-absolute-top-0 min-height-100vh--lg bg"></div>
-        <div class="container u-space-4-top u-space-3-bottom">
+        <div class="container ">
             <div class="row align-items-md-center">
                 <div class="col-lg-6">
                     <!-- Title -->
