scroll down arrow

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -206,8 +206,14 @@
     </div>
     <!-- End Hero -->
 
+    <!-- Scroll Down Button -->
+    <div class="arrow bounce">
+        <a class="fa fa-arrow-down fa-2x scroll" href="#innovation"></a>
+    </div>
+    <!-- End Scroll Down Button -->
+
     <!-- Icon Blocks -->
-    <div class="container u-space-3">
+    <div class="container u-space-3" id="innovation">
         <!-- Title -->
         <div class="w-md-80 w-lg-90 text-center mx-auto mb-9">
             <span class="u-label u-label--sm u-label--primary mb-2">Innovation</span>
@@ -783,11 +789,11 @@
         <div class="container u-space-3">
             <!-- Title -->
             <div class="w-md-80 w-lg-50 text-center mx-auto mb-9">
-                <a class="js-go-to u-go-to-ver-arrow" href="javascript:;" data-target="#svgArrows" data-compensation="#header" data-type="static" style="display: inline-block;">
+                <a class="js-go-to u-go-to-ver-arrow" href="#stats" data-target="#svgArrows" data-compensation="#header" data-type="static" style="display: inline-block;">
                     <span class="fa fa-long-arrow-alt-down u-go-to-ver-arrow__inner"></span>
                 </a>
                 <div id="svgArrows" class="pt-7">
-                    <h2 class="h3 font-weight-normal">inSiti groupe, un écosystème qui monte en puissance dans les régions françaises</h2>
+                    <h2 class="h3 font-weight-normal" id="stats">inSiti groupe, un écosystème qui monte en puissance dans les régions françaises</h2>
                 </div>
             </div>
             <!-- End Title -->
@@ -1037,6 +1043,7 @@
         </div>
     </div>
     <!-- End Testimonials section-->
+
 
      <!-- Devices v2 Section -->
     <div class="u-gradient-half-primary-v1 u-devices-v2">
